feat: fixes to account deletion
